--- a/src/app/routes/login/login.component.html
+++ b/src/app/routes/login/login.component.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<app-nav-bar></app-nav-bar>
 <div class="container d-flex justify-content-center align-items-center">
   <div class="form-wrapper" text-center>
     <h2 class="text-center">Login</h2>
