--- a/src/app/routes/register/register.component.html
+++ b/src/app/routes/register/register.component.html
@@ -1,1 +1,20 @@
-<p>register works!</p>
+<app-nav-bar></app-nav-bar>
+<div class="container d-flex justify-content-center align-items-center">
+  <div class="form-wrapper" text-center>
+    <h2 class="text-center">Register</h2>
+    <form [formGroup]="registerForm" (submit)="submit()" novalidate>
+      <div class="form-group">
+        <input type="email" class="form-control" id="email-input" placeholder="Enter Email" formControlName="email">
+      </div>
+      <div class="form-group">
+        <input type="password" class="form-control" id="password-input" placeholder="Enter Password" formControlName="password">
+      </div>
+      <div class="text-center">
+        <button type="submit" class="btn btn-primary" [disabled]="!registerForm.valid">Submit</button>
+      </div>
+    </form>
+    <div class="text-center">
+      <small class="text-center"><a routerLink="/login">Already have an account?</a></small>
+    </div>
+  </div>
+</div>
