--- a/src/app/routes/dashboard/dashboard.component.html
+++ b/src/app/routes/dashboard/dashboard.component.html
@@ -1,9 +1,15 @@
 <app-nav-bar></app-nav-bar>
-<div class="display-business-cards d-flex">
-  <h1>Business Cards</h1>
-  <div class="message-wrapper h-100">
-    <ng-container *ngFor="let card of cards">
-      <!--app_dashboard-- [card]="card"></!--app_dashboard-->
-    </ng-container>
+<div class="container">
+<div class="form">
+  <div class="d-flex justify-content-center align-items-center col-sm-12 h-100 d-table">
+    <h2 class="text-center">Business Cards</h2>
+  </div>
+  <div class="col-sm-12 h-100 d-table">
+    <ul class="list-group card card-block d-table-cell align-middle">
+      <app-card-item *ngFor="let card of cards"
+        [card]="card">
+      </app-card-item>
+    </ul>
+  </div>
   </div>
 </div>
