--- a/src/app/routes/profile/profile.component.html
+++ b/src/app/routes/profile/profile.component.html
@@ -1,2 +1,14 @@
 <app-nav-bar></app-nav-bar>
-<p>profile works!</p>
+<div class="container d-flex justify-content-center align-items-center">
+    <div class="form-wrapper" text-center>
+      <h2 class="text-center">Login</h2>
+      <form [formGroup]="profileForm" (close)="close()" novalidate>
+        <div class="form-group">
+          <input type="email" class="form-control" id="email-input" placeholder="Enter Email" formControlName="email">
+        </div>
+        <div class="text-center">
+          <button type="close" class="btn btn-primary">close</button>
+        </div>
+      </form>
+    </div>
+  </div>
