--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -7,7 +7,7 @@
           <a routerLink="/create"  routerLinkActive="active" class="nav-link">Create</a>
         </li>
         <li class="nav-item">
-            <a routerLink="/profile"  routerLinkActive="active" class="nav-link">Profile</a>
+            <a routerLink="'/profile/' + currentUser.id" routerLinkActive="active" class="nav-link">Profile</a>
           </li>
         <li class="nav-item">
           <a class="nav-link" (click)="auth.logout()">Logout</a>
