camara working again begin parsing text return from google vision

--- a/src/app/routes/create/create.component.html
+++ b/src/app/routes/create/create.component.html
@@ -2,7 +2,7 @@
 <div class="container d-flex justify-content-center align-items-center">
   <div class="form-wrapper" text-center>
     <h2 class="text-center">Create Card</h2>
-    <form [formGroup]="createForm" (submit)="submit()" novalidate>
+    <form [formGroup]="createForm">
         <div class="form-group" hidden>
             <input type="id"  class="form-control" id="id-input">
           </div>
